@@ -4,6 +4,14 @@
 //
 //===========================================================================
 
+14th March 2013 John Back
+     Added the method EvtParticle::getPDGId() to get the PDG integer for a
+     particle directly (which just calls EvtPDL::getStdHep()).
+
+2nd February 2013 Daniel Craik
+     Updated EvtDalitzTable to estimate probMax when it is missing from a 
+     Dalitz model.
+
 1st  February 2013 John Back
      Added the ability to read in Pythia 6 commands in ascii decay files in
      EvtDecayTable::readDecayFile (this was already possible in xml files).
